sent to pavel 5.1 and 5.2

--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -22,7 +22,7 @@ The next section introduces the patterns that are logically possible with case c
 
 Case competition has two aspects. The first aspect is the topic of Part \ref{part:case-facts} of the dissertation. It concerns which case wins the case competition. This is decided by the same case scale for all languages. The second aspects is the topic of Part \ref{part:variation} of the dissertation. This one concerns whether the case that wins the case competition is actually allowed to surface. It namely differs per language whether it allows the internal or the external case to do so.
 
-Metaphorically, the second aspect can be described as a language-specific approval committee. The committee learns (from the first aspect) which case wins the case competition. Then it can either approve this case or not approve it. This approval happens based on where the winning case comes from: from inside to the relative clause (internal) or from outside to the relative clause (external). It is determined per language whether it approves the internal case, the external case, both of them or none of them. The approval committee can only approve the winner of the competition or deny it, it cannot propose an alternative winner. In this metaphor, the approval of the committee means that a particular case is allowed to surface. When the case is not allowed to surface, the headless relative as a whole is ungrammatical.
+Metaphorically, the second aspect can be described as a language-specific approval committee. The committee learns (from the first aspect) which case wins the case competition. Then it can either approve this case or not approve it. This approval happens based on where the winning case comes from: from inside of the relative clause (internal) or from outside of the relative clause (external). It is determined per language whether it approves the internal case, the external case, both of them or none of them. The approval committee can only approve the winner of the competition or deny it, it cannot propose an alternative winner. In this metaphor, the approval of the committee means that a particular case is allowed to surface. When the case is not allowed to surface, the headless relative as a whole is ungrammatical.
 
 Taking this all together, there are four patterns possible in languages. First, the internal case and the external case are allowed to surface. Second, only the internal case is allowed to surface, and the external case is not. Third, only the external case is allowed to surface, and the internal case is not. Fourth, neither the internal case nor the external case is allowed to surface when either of them wins the competition. In what follows, I introduce these four possible patterns.
 
