--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -49,6 +49,7 @@ boompje/.style={for tree={s sep=8mm, inner sep=0, l=0}}
 \newcommand{\tcol}[2]{\textcolor{#1}{#2}}%shorter italics
 \usepackage{multirow}
 \renewcommand{\arraystretch}{1.2}
+\usepackage[skip=5pt]{caption}
 %%%TABLES%%%
 
 
