--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -699,3 +699,10 @@
   year={2020},
   publisher={Wiley Online Library}
 }
+
+@book{durrell2011,
+  title={Hammer's German grammar and usage},
+  author={Durrell, Martin},
+  year={2011},
+  publisher={Routledge}
+}
