--- a/discussion.tex
+++ b/discussion.tex
@@ -29,8 +29,9 @@ grosu: morphological distinctions correlate with `freedom'
 Why \tsc{fem} does not have \tsc{wh}-pronouns?
 
 
+\section{On clitics}
 
-
+I am saying things about clitics with this story. Polish clitics start at \tsc{ind}/\tsc{f1}. The fact that they have different bottoms seems to suggest that there needs to be a zero element to fill up the space. Actually, \tsc{ref} plus some gender/number might be the zero element? Although then I do not have the analysis in which in clitics some low structure is missing. Modern German does not really have clitics. Instead, it has weak pronouns that start at \tsc{class} (but lack the \tsc{ref} or the \tsc{ref} is schwa).
 
 \section{More languages}
 
