--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -706,3 +706,25 @@
   year={2011},
   publisher={Routledge}
 }
+
+@incollection{cinqueforthcoming,
+  title={Some notes on externalization},
+  author = {Cinque, Guglielmo},
+  year={forthcoming},
+  publisher={Oxford University Press},
+  editor={Ángel J. Gallego and Dennis Ott},
+  booktitle={}
+}
+
+
+@article{lander2018,
+  title={The nanosyntax of spatial deixis},
+  author={Lander, Eric and Haegeman, Liliane},
+  journal={Studia linguistica},
+  volume={72},
+  number={2},
+  pages={362--427},
+  year={2018},
+  publisher={Wiley Online Library},
+  doi={10.1111/stul.12061}
+}
